SERVER-60453 Fix sbe::vm::genericCompare() to be consistent about how it handles NaN